--- a/MDK/Objects/gd32f4.build_log.htm
+++ b/MDK/Objects/gd32f4.build_log.htm
@@ -5,10 +5,13 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.39.0.0
 Copyright (C) 2023 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: qiwei wang, xxx, LIC=0YKY4-ZZWJI-JASDI-6AV6Y-GT95F-MW3I9
+License Information: qiwei wang
+xxx
+User-based license: Keil MDK Community
+Valid until: Jun 1 2033. Cached until: Dec 31 2023
  
 Tool Versions:
-Toolchain:       MDK-ARM Community  Version: 5.39.0.0
+Toolchain:       Keil MDK Community  Version: 5.39.0.0
 Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
 C Compiler:      ArmClang.exe V6.21
 Assembler:       Armasm.exe V6.21
@@ -21,52 +24,52 @@ Target DLL:      CMSIS_AGDI.dll V1.33.16.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\GD32F427VK_projects\GD32F427VK_rc522\MDK\gd32f4.uvprojx
+D:\GD32F427VK_RC522\MDK\gd32f4.uvprojx
 Project File Date:  12/21/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'gd32f4'
-compiling main.c...
-compiling gd32f4xx_crc.c...
 compiling gd32f4xx_dbg.c...
-compiling gd32f4xx_it.c...
+compiling gd32f4xx_crc.c...
 compiling gd32f4xx_fwdgt.c...
-compiling gd32f4xx_exti.c...
-compiling gd32f4xx_can.c...
 compiling gd32f4xx_dci.c...
+compiling gd32f4xx_it.c...
+compiling main.c...
+compiling gd32f4xx_exti.c...
 compiling gd32f4xx_ctc.c...
 compiling gd32f4xx_dac.c...
 compiling gd32f4xx_dma.c...
 compiling gd32f4xx_adc.c...
 compiling gd32f4xx_exmc.c...
+compiling gd32f4xx_can.c...
 compiling gd32f4xx_fmc.c...
-compiling gd32f4xx_enet.c...
 compiling gd32f4xx_gpio.c...
-compiling gd32f4xx_iref.c...
 compiling gd32f4xx_i2c.c...
+compiling gd32f4xx_enet.c...
+compiling gd32f4xx_iref.c...
 compiling gd32f4xx_misc.c...
-compiling gd32f4xx_pmu.c...
 compiling gd32f4xx_ipa.c...
-compiling gd32f4xx_rcu.c...
+compiling gd32f4xx_pmu.c...
 compiling gd32f4xx_sdio.c...
-compiling gd32f4xx_trng.c...
-compiling gd32f4xx_rtc.c...
-compiling gd32f4xx_syscfg.c...
-compiling gd32f4xx_tli.c...
 compiling gd32f4xx_spi.c...
+compiling gd32f4xx_rcu.c...
+compiling gd32f4xx_syscfg.c...
+compiling gd32f4xx_rtc.c...
+compiling gd32f4xx_trng.c...
 compiling gd32f4xx_wwdgt.c...
 assembling startup_gd32f407_427.s...
+compiling gd32f4xx_tli.c...
 compiling gd32f4xx_usart.c...
 compiling gd32f4xx_timer.c...
 compiling hw_spi.c...
 compiling system_gd32f4xx.c...
-compiling my_uart.c...
 compiling systick.c...
 compiling 485Port.c...
+compiling my_uart.c...
 compiling rc522.c...
 linking...
-Program Size: Code=11704 RO-data=984 RW-data=16 ZI-data=2176  
+Program Size: Code=11796 RO-data=1020 RW-data=16 ZI-data=2176  
 ".\Objects\gd32f4.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
